--- a/src/Show/AddShows.html
+++ b/src/Show/AddShows.html
@@ -5,6 +5,29 @@
     <title>Title</title>
 </head>
 <body>
+<!-- ALt ANDET OVER; TILFØJER BARE FORMULAR -->
+
+<!-- ALt ANDET OVER; TILFØJER BARE FORMULAR -->
+<div class ="show-form">
+<form>
+    <label for="film">Film:</label>
+    <select id="film" name="filmId">
+        <option value="1">Avatar:The Way Of Water</option>
+        <option value="2">Avengers: Endgame</option>
+        <option value="3">Jurassic World: Dominion</option>
+        <option value="4">The Batman</option>
+    </select>
+
+    <label for="dato">Dato :</label>
+    <input type="date" id="dato">  <!-- måske tilføj name ting men kig senere -->
+
+    <label for="tid">Tid:</label>
+    <input type="time" id="tid" step="60">
+
+    <input type="submit" value="Gem">
+</form>
+</div>
+<script src="AddShows.js"></script>
 
 </body>
 </html>
