--- a/src/Booking/AddBooking.html
+++ b/src/Booking/AddBooking.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tilføj Booking</title>
 </head>
 <body>
+<!-- Insæt alt der der andet nødvendige noget.
+alt det her er bare formular til booking-->
+<div class="booking-form">
+<form>
+    <label for="navn">Navn:</label>
+    <input type="text" id="navn">
+
+    <label for="tlfNr">TlfNr:</label>
+    <input type="number" id="tlfNr">
+
+    <label for="antal">Antal:</label>
+    <input type="number" id="antal">
+
+    <input type="submit" value="Gem">
+</form>
+</div>
+
+<script src="AddBooking.js"></script>
+
 
 </body>
 </html>
