--- a/src/Film/AddFilm.html
+++ b/src/Film/AddFilm.html
@@ -6,5 +6,31 @@
 </head>
 <body>
 
+<!-- ALt ANDET OVER; TILFØJER BARE FORMULAR -->
+<div class="film-form">
+<form>
+    <label for="titel">Titel:</label>
+    <input type="text" id="titel">
+
+    <label for="beskrivelse">Beskrivelse:</label>
+    <input type="text" id="beskrivelse">
+
+    <label for="spilleTid">Spille tid:</label>
+    <input type="time" id="spilleTid" step="60">  <!-- måske tilføj name ting men kig senere -->
+
+    <label for="udgivelsesaar">Udgivelses aar:</label>
+    <input type="number" id="udgivelsesaar">
+
+    <label for="aldergraense">Aldersgraense:</label>
+    <input type="number" id="aldergraense">
+
+    <input type="submit" value="Gem">
+</form>
+</div>
+<script src="AddFilm.js"></script>
+
+
+
+
 </body>
 </html>
