--- a/src/Booking/AddBooking.html
+++ b/src/Booking/AddBooking.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tilføj Booking</title>
+    <title>Tilføj Bookings</title>
 </head>
 <body>
 <!-- Insæt alt der der andet nødvendige noget.
