--- a/src/Booking/AddBooking.html
+++ b/src/Booking/AddBooking.html
@@ -8,7 +8,7 @@
 <!-- Insæt alt der der andet nødvendige noget.
 alt det her er bare formular til booking-->
 <div class="booking-form">
-<form>
+<form id="add-booking">
     <label for="navn">Navn:</label>
     <input type="text" id="navn">
 
