--- a/src/Film/AddFilm.html
+++ b/src/Film/AddFilm.html
@@ -8,7 +8,7 @@
 
 <!-- ALt ANDET OVER; TILFØJER BARE FORMULAR -->
 <div class="film-form">
-<form>
+<form id="add-film">
     <label for="titel">Titel:</label>
     <input type="text" id="titel">
 
