--- a/src/Show/AddShows.html
+++ b/src/Show/AddShows.html
@@ -9,7 +9,7 @@
 
 <!-- ALt ANDET OVER; TILFØJER BARE FORMULAR -->
 <div class ="show-form">
-<form>
+<form id="add-show">
     <label for="film">Film:</label>
     <select id="film" name="filmId">
         <option value="1">Avatar:The Way Of Water</option>
