--- a/src/Booking/AddBooking.html
+++ b/src/Booking/AddBooking.html
@@ -7,6 +7,10 @@
 <body>
 <!-- Insæt alt der der andet nødvendige noget.
 alt det her er bare formular til booking-->
+
+
+<h1>Tilføj en booking</h1>
+
 <div class="booking-form">
 <form id="add-booking">
     <label for="navn">Navn:</label>
