--- a/src/Film/AddFilm.html
+++ b/src/Film/AddFilm.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tilføj en film</title>
 </head>
 <body>
 
-<!-- ALt ANDET OVER; TILFØJER BARE FORMULAR -->
+
+
+<h1>Tilføj en film</h1>
+
+
+
 <div class="film-form">
 <form id="add-film">
     <label for="titel">Titel:</label>
