--- a/src/Booking/AllBookings.html
+++ b/src/Booking/AllBookings.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Booking oversigt</title>
 </head>
+
+
 <body>
+
+<h1> Alle bookinger:</h1>
+
+<div class="booking-oversigt">
+    <table>
+       <thead>
+       <tr>
+           <th>Navn:</th>
+           <th>TelefonNr:</th>
+           <th>Antal:</th>
+           <th>BookingId:</th>
+           <th>Film Navn:</th>
+           <th>Film Tid:</th>
+       </tr>
+       </thead>
+    </table>
+</div>
+
+
 
 
 </body>
