--- a/src/Film/AllFilms.html
+++ b/src/Film/AllFilms.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Film  Oversigt</title>
 </head>
+
+
 <body>
 
+<h1> Alle film:</h1>
+
+<div class="film-oversigt">
+    <table>
+        <thead>
+        <tr>
+            <th>Navn:</th>
+            <th>TelefonNr:</th>
+            <th>Antal:</th>
+            <th>BookingId:</th>
+            <th>Film Navn:</th>
+            <th>Film Tid:</th>
+        </tr>
+        </thead>
+    </table>
+</div>
+
+
+
 </body>
+
+
 </html>
