--- a/src/Show/AddShows.html
+++ b/src/Show/AddShows.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>show</title>
 </head>
 <body>
-<!-- ALt ANDET OVER; TILFØJER BARE FORMULAR -->
 
-<!-- ALt ANDET OVER; TILFØJER BARE FORMULAR -->
+
+
+<h1> Tilføj et show</h1>
+
+
 <div class ="show-form">
-<form id="add-show">
+<form>
     <label for="film">Film:</label>
     <select id="film" name="filmId">
         <option value="1">Avatar:The Way Of Water</option>
