--- a/src/Show/AllShows.html
+++ b/src/Show/AllShows.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Show oversigt</title>
 </head>
+
+
 <body>
 
+
+<h1> Alle shows:</h1>
+
+<div class="booking-oversigt">
+    <table>
+        <thead>
+        <tr>
+            <th>Navn:</th>
+            <th>TelefonNr:</th>
+            <th>Antal:</th>
+            <th>BookingId:</th>
+            <th>Film Navn:</th>
+            <th>Film Tid:</th>
+        </tr>
+        </thead>
+    </table>
+</div>
+
+
+
+
+
 </body>
+
+
+
+
 </html>
