--- a/src/Booking/AddBooking.html
+++ b/src/Booking/AddBooking.html
@@ -12,7 +12,7 @@ alt det her er bare formular til booking-->
 <h1>Tilføj en booking</h1>
 
 <div class="booking-form">
-<form id="add-booking">
+
     <label for="navn">Navn:</label>
     <input type="text" id="navn">
 
@@ -22,8 +22,13 @@ alt det her er bare formular til booking-->
     <label for="antal">Antal:</label>
     <input type="number" id="antal">
 
+    <label for="show">Vælg dato og tid:</label>
+    <select id="show" required>
+
+    </select>
+
     <input type="submit" value="Gem">
-</form>
+    </form>
 </div>
 
 <script src="AddBooking.js"></script>
