--- a/src/Show/AllShows.html
+++ b/src/Show/AllShows.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 
-
 <head>
     <meta charset="UTF-8">
     <title>Show oversigt</title>
@@ -14,28 +13,16 @@
 
 <h1> Alle shows:</h1>
 
-<div class="booking-oversigt">
+<div class="show-oversigt">
     <table>
         <thead>
         <tr>
-            <th>Navn:</th>
-            <th>TelefonNr:</th>
-            <th>Antal:</th>
-            <th>BookingId:</th>
-            <th>Film Navn:</th>
-            <th>Film Tid:</th>
+            <th>Dato:</th>
+            <th>Tid</th>
         </tr>
         </thead>
     </table>
 </div>
 
-
-
-
-
 </body>
-
-
-
-
 </html>
