--- a/src/Booking/AllBookings.html
+++ b/src/Booking/AllBookings.html
@@ -23,6 +23,7 @@
            <th>Navn:</th>
            <th>TelefonNr:</th>
            <th>Antal:</th>
+           <th>Slet:</th>
 
        </tr>
        </thead>
