--- a/src/Film/AllFilms.html
+++ b/src/Film/AllFilms.html
@@ -15,12 +15,12 @@
     <table>
         <thead>
         <tr>
-            <th>Navn:</th>
-            <th>TelefonNr:</th>
-            <th>Antal:</th>
-            <th>BookingId:</th>
-            <th>Film Navn:</th>
-            <th>Film Tid:</th>
+            <th>Titel:</th>
+            <th>Beskrivelse:</th>
+            <th>Spille Tid:</th>
+            <th>Udgivelses Aar:</th>
+            <th>Alders graense:</th>
+
         </tr>
         </thead>
     </table>
