--- a/src/Show/AllShows.html
+++ b/src/Show/AllShows.html
@@ -19,6 +19,7 @@
         <tr>
             <th>Dato:</th>
             <th>Tid</th>
+            <th>Slet:</th>
         </tr>
         </thead>
     </table>
