Tilbage knapper tilføjet plus allfilm lavet

--- a/src/Booking/AddBooking.html
+++ b/src/Booking/AddBooking.html
@@ -31,6 +31,8 @@ alt det her er bare formular til booking-->
     </form>
 </div>
 
+<div id="tilbage-knap-container"></div>
+
 <script src="AddBooking.js"></script>
 
 
