--- a/src/Film/AddFilm.html
+++ b/src/Film/AddFilm.html
@@ -32,6 +32,10 @@
     <input type="submit" value="Gem">
 </form>
 </div>
+
+<div id="tilbage-knap-container"></div>
+
+
 <script src="AddFilm.js"></script>
 
 
