--- a/src/Film/AllFilms.html
+++ b/src/Film/AllFilms.html
@@ -3,30 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Film  Oversigt</title>
+    <title>Film </title>
 </head>
 
 
 <body>
 
-<h1> Alle film:</h1>
+<h1>Vælg en film</h1>
 
-<div class="film-oversigt">
-    <table>
-        <thead>
-        <tr>
-            <th>Titel:</th>
-            <th>Beskrivelse:</th>
-            <th>Spille Tid:</th>
-            <th>Udgivelses Aar:</th>
-            <th>Alders graense:</th>
+<div id="film-container" class="film-container"></div>
 
-        </tr>
-        </thead>
-    </table>
-</div>
-
-
+<script src="FilmOversigt.js"></script>
 
 </body>
 
