--- a/src/Show/AddShows.html
+++ b/src/Show/AddShows.html
@@ -30,6 +30,10 @@
     <input type="submit" value="Gem">
 </form>
 </div>
+
+<div id="tilbage-knap-container"></div>
+
+
 <script src="AddShows.js"></script>
 
 </body>
