Menu tilføket plus link til css sheet

--- a/src/Booking/AddBooking.html
+++ b/src/Booking/AddBooking.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Tilføj Bookings</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<!-- Insæt alt der der andet nødvendige noget.
-alt det her er bare formular til booking-->
 
+<nav>
+    <a href="AllFilm.html">Film</a>
+    <a href="AllBooking.html">Bookinger</a>
+    <a href="AllShow.html">Shows</a>
+</nav>
 
 <h1>Tilføj en booking</h1>
 
