--- a/src/Show/AddShows.html
+++ b/src/Show/AddShows.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>show</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<nav>
+    <a href="AllFilm.html">Film</a>
+    <a href="AllBooking.html">Bookinger</a>
+    <a href="AllShow.html">Shows</a>
+</nav>
 
 
 <h1> Tilføj et show</h1>
