--- a/src/Show/AllShows.html
+++ b/src/Show/AllShows.html
@@ -5,10 +5,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Show oversigt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
+<nav>
+    <a href="AllFilm.html">Film</a>
+    <a href="AllBooking.html">Bookinger</a>
+    <a href="AllShow.html">Shows</a>
+</nav>
+
 
 
 <h1> Alle shows:</h1>
