--- a/src/Booking/AllBookings.html
+++ b/src/Booking/AllBookings.html
@@ -5,10 +5,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Booking oversigt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
+
+<nav>
+    <a href="AllFilm.html">Film</a>
+    <a href="AllBooking.html">Bookinger</a>
+    <a href="AllShow.html">Shows</a>
+</nav>
+
 
 <h1> Alle bookinger:</h1>
 
