--- a/src/Film/AddFilm.html
+++ b/src/Film/AddFilm.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Tilføj en film</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<nav>
+    <a href="AllFilm.html">Film</a>
+    <a href="AllBooking.html">Bookinger</a>
+    <a href="AllShow.html">Shows</a>
+</nav>
 
 
 <h1>Tilføj en film</h1>
