--- a/src/Film/AllFilms.html
+++ b/src/Film/AllFilms.html
@@ -4,11 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Film </title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 
 
 <body>
 
+
+<nav>
+    <a href="AllFilm.html">Film</a>
+    <a href="AllBooking.html">Bookinger</a>
+    <a href="AllShow.html">Shows</a>
+</nav>
 <h1>Vælg en film</h1>
 
 <div id="film-container" class="film-container"></div>
